fixed port paragraph spacing

--- a/portfolio.css
+++ b/portfolio.css
@@ -86,7 +86,8 @@ p{
     display:flex;
     justify-content: center;
     text-decoration:double underline white;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
+    margin-top:2%
 }
 
 .pic{
@@ -94,7 +95,7 @@ p{
     margin-left:14%;
     margin-bottom:0%;
     border:solid white;
-    box-shadow: 0px 5px 8px black;
+    box-shadow: -5px 5px 10px blue;
 }
 
 #buylink{
